<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
     android:background="@drawable/background">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:text="At the Shop"        
        android:textColor="#454545"
        android:textSize="30sp" />  
    
       <EditText
        android:id="@+id/mytextText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintList" >

        <requestFocus />
    </EditText>

    <CheckBox
        android:id="@+id/chkIos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item1" />
		
    <CheckBox
        android:id="@+id/chkAndroid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:text="@string/item2" />
        android:checked="true" />

    <CheckBox
        android:id="@+id/chkWindows"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:text="@string/item3" />

    <Button
        android:id="@+id/btnDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Options" />

</LinearLayout>